tailwind for nav, fix font on mobile

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -1,6 +1,6 @@
-header {
+/* header {
     margin-bottom: 0.5em
-}
+} */
 
 .homehero {
     position: relative;
@@ -50,47 +50,39 @@ header {
     flex: 1;
 }
 
-.homehero h1 {
-    text-align: center;
-    color: white;
-    font-size: 6em;
-    margin: 0.2em;
-
-}
-
-nav {
+/* nav {
     display: flex;
     flex-flow: row wrap;
     align-items: baseline;
     text-align: center;
     background-color: black;
-}
+} */
 
-.homehero nav {
+/* .homehero nav {
     background-color: transparent;
-}
+} */
 
-nav .item {
+/* nav .item {
     padding: 0;
     flex-grow: 1;
-    /*flex: 1;*/
-}
+    /*flex: 1;* /
+} */
 
-nav .logo {
+/* nav .logo {
     margin: 0.5em 0 0 0;
     font-size: 1.8em;
     float: left;
     font-weight: bold;
-}
+} */
 
-.homehero nav .item {
+/* .homehero nav .item {
     margin: 1em 1em 1em 1em;
-    /*margin: 0em;*/
+    /*margin: 0em;* /
     flex-grow: 1;
-    /*flex: 1;*/
-}
+    /*flex: 1;* /
+} */
 
-nav .item a {
+/* nav .item a {
     color: white;
     font-size: 1.5em;
     text-decoration: none;
@@ -100,7 +92,7 @@ nav .item a {
     color: white;
     font-size: 3em;
     text-decoration: none;
-}
+} */
 
 nav .item a:after {
 	content: '';
